# dbt-project-micro

./: README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/: agent_fix.py
.github/workflows/: agentic-fix.yml  dbt-run.yml  sync-warehouse-types.yml
data/: bigquery_types.yml  databricks_types.yml  motherduck_types.yml  snowflake_types.yml
macros/: bigquery_type_examples.sql  databricks_type_examples.sql  motherduck_type_examples.sql  snowflake_type_examples.sql
models/: all_types.sql
scripts/: requirements.txt  sync_bigquery_types.py  sync_databricks_types.py  sync_motherduck_types.py  sync_snowflake_types.py
